# winfile-Clion

./: CMakeLists.txt  README.md  wfassoc.c  winfile.c
idea/: modules.xml  workspace.xml
